@@ -110,10 +110,10 @@ namespace Mono.Cecil.Binary {
 				throw new ImageFormatException ("Wrong RVA for .text section");
 
 			img.PEOptionalHeader.StandardFields.CodeSize = GetAligned (
-				m_textSect.SizeOfRawData + m_relocSect.SizeOfRawData, fileAlign);
+				m_textSect.SizeOfRawData, fileAlign);
 			img.PEOptionalHeader.StandardFields.InitializedDataSize = 0x200; // + rsrc.SizeOfRawData ?
 			img.PEOptionalHeader.StandardFields.BaseOfCode = m_textSect.VirtualAddress;
-			//img.PEOptionalHeader.StandardFields.BaseOfData = m_relocSect.VirtualAddress;
+			img.PEOptionalHeader.StandardFields.BaseOfData = m_relocSect.VirtualAddress;
 
 			imageSize += headersEnd;
 			img.PEOptionalHeader.NTSpecificFields.ImageSize = GetAligned (imageSize, sectAlign);
@@ -124,6 +124,7 @@ namespace Mono.Cecil.Binary {
 			if (m_kind == AssemblyKind.Dll) {
 				img.PEFileHeader.Characteristics = ImageCharacteristics.CILOnlyDll;
 				img.HintNameTable.RuntimeMain = HintNameTable.RuntimeMainDll;
+				img.PEOptionalHeader.NTSpecificFields.DLLFlags = 0x400;
 			} else {
 				img.PEFileHeader.Characteristics = ImageCharacteristics.CILOnlyExe;
 				img.HintNameTable.RuntimeMain = HintNameTable.RuntimeMainExe;
@@ -133,12 +134,12 @@ namespace Mono.Cecil.Binary {
 
 			RVA importTable = new RVA (img.TextSection.VirtualAddress + m_mdWriter.ItStartPos);
 
-			img.PEOptionalHeader.DataDirectories.ImportTable = new DataDirectory (importTable, 0x4f);
+			img.PEOptionalHeader.DataDirectories.ImportTable = new DataDirectory (importTable, 0x57);
 
-			img.ImportTable.ImportLookupTable = new RVA ((uint) importTable + 0x1e);
+			img.ImportTable.ImportLookupTable = new RVA ((uint) importTable + 0x28);
 
 			img.ImportLookupTable.HintNameRVA = img.ImportAddressTable.HintNameTableRVA =
-				new RVA ((uint) img.ImportTable.ImportLookupTable + 0x10);
+				new RVA ((uint) img.ImportTable.ImportLookupTable + 0x14);
 			img.ImportTable.Name = new RVA ((uint) img.ImportLookupTable.HintNameRVA + 0xe);
 		}
 
@@ -188,13 +189,13 @@ namespace Mono.Cecil.Binary {
 			m_textWriter.Write (it.ForwardChain);
 			m_textWriter.Write (it.Name.Value);
 			m_textWriter.Write (it.ImportAddressTable.Value);
-			m_textWriter.Write (new byte [10]);
+			m_textWriter.Write (new byte [20]);
 		}
 
 		public override void Visit (ImportLookupTable ilt)
 		{
 			m_textWriter.Write (ilt.HintNameRVA.Value);
-			m_textWriter.Write (new byte [12]);
+			m_textWriter.Write (new byte [16]);
 		}
 
 		public override void Visit (HintNameTable hnt)
